# MLIR-TVM

./: README.md
Ch8/: CMakeLists.txt  README.md  toyc.cpp
Ch8/include/toy/: CMakeLists.txt  Passes.h  RelayDialect.h  RelayIR.h  RelayOps.td
Ch8/mlir/: LowerToRelay.cpp  RelayDialect.cpp  translateModuleToRelayIR.cpp
Ch8/test/: codegen.ll  codegen.mlir  codegen.toy  invalid.mlir  sample.ll  sample.s  sample.toy  scalar.toy  small.toy  target.mlir  transpose_transpose.toy  trivialReshape.toy
